# TinyLS

./: .gitignore  CMakeLists.txt  README.md  Rakefile
loom/common/platform/: platformError.c  platformFile.c  platformIO.c  platformThread.c
loom/script/native/core/system/Platform/: lmPlatform.cpp
loom/tinyrun/: main.cpp
script/src/: Main.build
script/src/main/: Program.ls
script/src/system/Platform/: Platform.ls
